--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PocketGuard Splash Page</title>
-  <link rel="stylesheet" href="./css/splash.css">
+  <link rel="stylesheet" href="./css/style.css">
 
   <script>
     // Redirect after 3 seconds (3000 milliseconds)
